закомментировал aside и убрал правый падинг для него

--- a/index.html
+++ b/index.html
@@ -142,11 +142,75 @@
                           <svg xmlns="http://www.w3.org/2000/svg" width="35" height="28" viewBox="0 0 29 22"><path fill="#fff" d="M25.4 0H3.6C1.6 0 0 1.6 0 3.7v14.7c0 2 1.6 3.7 3.6 3.7h21.7c2 0 3.6-1.6 3.6-3.7V3.7C29 1.6 27.4 0 25.4 0zm-6 9.8l7.7-6.7c.1.2.1.3.1.5v14.7c0 .1 0 .2-.1.4l-7.7-8.9zm6-8c.1 0 .2 0 .3.1l-11.2 9.7L3.3 1.9c.1 0 .2-.1.3-.1h21.8zM1.9 18.7c0-.1-.1-.2-.1-.4V3.7c0-.2.1-.4.1-.5l7.7 6.6-7.7 8.9zm1.7 1.5c-.2 0-.3-.1-.5-.1L11 11l2.9 2.6c.2.1.4.2.6.2.2 0 .4-.1.6-.2L18 11l7.9 9.1c-.2.1-.3.1-.5.1H3.6zm0 0"></path></svg>
                       </li>
                     </ul>
-                    <div class="hamburger hamburger--slider js-hamburger">
+                    <div id="top-menu" class="hamburger hamburger--slider js-hamburger">
                       <div class="hamburger-box">
                         <div class="hamburger-inner"></div>
                     </div>
                 </div>
+                    <div class="main-aside__orange">
+                <div class="main-aside__orange__contacts">
+                    <ul class="main-aside__orange-leng">
+                        <li class="main-aside__orange-leng--item" id="lmRuPhone">
+                            <a href="lnd.html#" class="ignoreJumping">RU</a>
+                        </li>
+                        <li class="main-aside__orange-leng--item" id="lmPlPhone">
+                            <a href="lnd.html#" class="ignoreJumping">PL</a>
+                        </li>
+                        <li class="main-aside__orange-leng--item" id="lmUsPhone">
+                            <a href="lnd.html#" class="ignoreJumping">US</a>
+                        </li>
+                        <li class="main-aside__orange-leng--item" id="lmUaPhone">
+                            <a href="lnd.html#" class="ignoreJumping">UA</a>
+                        </li>
+                    </ul>
+                    <a class="main-aside__orange--phone" id="ahrefTelLeftMenu"
+                       href="tel:+7(958)581-51-32">+7(958)581-51-32</a><a class="main-aside__orange--email"
+                                                                          href="http://www.google.com/recaptcha/mailhide/d?k=01oxK4h5B7wOa1pRAWE0EEFQ==&amp;c=6fo-459-ViczJnpBe0P8_qfSd_lsVAKTD8w4uNJJzKA="
+                                                                          onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01oxK4h5B7wOa1pRAWE0EEFQ\x3d\x3d\x26c\x3d6fo-459-ViczJnpBe0P8_qfSd_lsVAKTD8w4uNJJzKA\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
+                                                                          title="Reveal this e-mail address">s...@devorno.com</a>
+
+
+                </div>
+                <div class="hr-line"></div>
+                <ul class="main-aside__orange__menu">
+                    <li class="main-aside__orange__menu--item">
+                        <a href="#why-we">
+                            О
+                            нас
+                        </a>
+                    </li>
+                    <li class="main-aside__orange__menu--item">
+                        <a href="#portfolio">Портфолио</a>
+                    </li>
+                    <li class="main-aside__orange__menu--item">
+                        <a href="#skills">
+                            Наши
+                            навыки
+                        </a>
+                    </li>
+                    <li class="main-aside__orange__menu--item">
+                        <a href="#calc">Стоимость</a>
+                    </li>
+                </ul>
+                <div class="hr-line"></div>
+                <ul class="main-aside__orange__social">
+                    <li class="main-aside__orange__social--item">
+                        <a href="lnd.html#">
+                            <img src="img/general/twitter.png" alt="Tweeter">
+                        </a>
+                    </li>
+                    <li class="main-aside__orange__social--item">
+                        <a href="lnd.html#">
+                            <img src="img/general/instagram.png" alt="Instagramm">
+                        </a>
+                    </li>
+                    <li class="main-aside__orange__social--item">
+                        <a href="lnd.html#">
+                            <img src="img/general/facebook.png" alt="Facebook">
+                        </a>
+                    </li>
+                </ul>
+            </div>
                 </nav>
             </div>
         </div>
@@ -1214,97 +1278,102 @@
                 </div>
             </div>
         </section>
-        <aside class="main-aside">
-            <div class="main-aside__orange">
-                <div class="main-aside__orange__contacts">
-                    <ul class="main-aside__orange-leng">
-                        <li class="main-aside__orange-leng--item" id="lmRuPhone">
-                            <a href="lnd.html#" class="ignoreJumping">RU</a>
-                        </li>
-                        <li class="main-aside__orange-leng--item" id="lmPlPhone">
-                            <a href="lnd.html#" class="ignoreJumping">PL</a>
-                        </li>
-                        <li class="main-aside__orange-leng--item" id="lmUsPhone">
-                            <a href="lnd.html#" class="ignoreJumping">US</a>
-                        </li>
-                        <li class="main-aside__orange-leng--item" id="lmUaPhone">
-                            <a href="lnd.html#" class="ignoreJumping">UA</a>
-                        </li>
-                    </ul>
-                    <a class="main-aside__orange--phone" id="ahrefTelLeftMenu"
-                       href="tel:+7(958)581-51-32">+7(958)581-51-32</a><a class="main-aside__orange--email"
-                                                                          href="http://www.google.com/recaptcha/mailhide/d?k=01oxK4h5B7wOa1pRAWE0EEFQ==&amp;c=6fo-459-ViczJnpBe0P8_qfSd_lsVAKTD8w4uNJJzKA="
-                                                                          onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01oxK4h5B7wOa1pRAWE0EEFQ\x3d\x3d\x26c\x3d6fo-459-ViczJnpBe0P8_qfSd_lsVAKTD8w4uNJJzKA\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"
-                                                                          title="Reveal this e-mail address">s...@devorno.com</a>
-
-
-                </div>
-                <div class="hr-line"></div>
-                <ul class="main-aside__orange__menu">
-                    <li class="main-aside__orange__menu--item">
-                        <a href="#why-we">
-                            О
-                            нас
-                        </a>
-                    </li>
-                    <li class="main-aside__orange__menu--item">
-                        <a href="#portfolio">Портфолио</a>
-                    </li>
-                    <li class="main-aside__orange__menu--item">
-                        <a href="#skills">
-                            Наши
-                            навыки
-                        </a>
-                    </li>
-                    <li class="main-aside__orange__menu--item">
-                        <a href="#calc">Стоимость</a>
-                    </li>
-                </ul>
-                <div class="hr-line"></div>
-                <ul class="main-aside__orange__social">
-                    <li class="main-aside__orange__social--item">
-                        <a href="lnd.html#">
-                            <img src="img/general/twitter.png" alt="Tweeter">
-                        </a>
-                    </li>
-                    <li class="main-aside__orange__social--item">
-                        <a href="lnd.html#">
-                            <img src="img/general/instagram.png" alt="Instagramm">
-                        </a>
-                    </li>
-                    <li class="main-aside__orange__social--item">
-                        <a href="lnd.html#">
-                            <img src="img/general/facebook.png" alt="Facebook">
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="main-aside__blue">
-                <div id="navToggle" class="hamburger hamburger--slider js-hamburger">
-                  <div class="hamburger-box">
-                    <div class="hamburger-inner"></div>
-                  </div>
-                </div>
-                <ul class="aside-dots">
-                    <li class="aside-dots--item">
-                        <a class="active-li why-we-a"
-                           href="lnd.html#why-we"></a>
-                    </li>
-                    <li class="aside-dots--item">
-                        <a class="portfolio-a"
-                           href="lnd.html#portfolio"></a>
-                    </li>
-                    <li class="aside-dots--item">
-                        <a class="skills-a"
-                           href="lnd.html#skills"></a>
-                    </li>
-                    <li class="aside-dots--item">
-                        <a class="calc-a"
-                           href="lnd.html#calc"></a>
-                    </li>
-                </ul>
-            </div>
-        </aside>
+      
+        <!--закомментировал aside---------------------->
+        <div class="aside-in-comments">
+            <!--<aside class="main-aside">-->
+              <!--<div class="main-aside__orange">-->
+                  <!--<div class="main-aside__orange__contacts">-->
+                      <!--<ul class="main-aside__orange-leng">-->
+                          <!--<li class="main-aside__orange-leng&#45;&#45;item" id="lmRuPhone">-->
+                              <!--<a href="lnd.html#" class="ignoreJumping">RU</a>-->
+                          <!--</li>-->
+                          <!--<li class="main-aside__orange-leng&#45;&#45;item" id="lmPlPhone">-->
+                              <!--<a href="lnd.html#" class="ignoreJumping">PL</a>-->
+                          <!--</li>-->
+                          <!--<li class="main-aside__orange-leng&#45;&#45;item" id="lmUsPhone">-->
+                              <!--<a href="lnd.html#" class="ignoreJumping">US</a>-->
+                          <!--</li>-->
+                          <!--<li class="main-aside__orange-leng&#45;&#45;item" id="lmUaPhone">-->
+                              <!--<a href="lnd.html#" class="ignoreJumping">UA</a>-->
+                          <!--</li>-->
+                      <!--</ul>-->
+                      <!--<a class="main-aside__orange&#45;&#45;phone" id="ahrefTelLeftMenu"-->
+                         <!--href="tel:+7(958)581-51-32">+7(958)581-51-32</a><a class="main-aside__orange&#45;&#45;email"-->
+                                                                            <!--href="http://www.google.com/recaptcha/mailhide/d?k=01oxK4h5B7wOa1pRAWE0EEFQ==&amp;c=6fo-459-ViczJnpBe0P8_qfSd_lsVAKTD8w4uNJJzKA="-->
+                                                                            <!--onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01oxK4h5B7wOa1pRAWE0EEFQ\x3d\x3d\x26c\x3d6fo-459-ViczJnpBe0P8_qfSd_lsVAKTD8w4uNJJzKA\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;"-->
+                                                                            <!--title="Reveal this e-mail address">s...@devorno.com</a>-->
+  <!---->
+  <!---->
+                  <!--</div>-->
+                  <!--<div class="hr-line"></div>-->
+                  <!--<ul class="main-aside__orange__menu">-->
+                      <!--<li class="main-aside__orange__menu&#45;&#45;item">-->
+                          <!--<a href="#why-we">-->
+                              <!--О-->
+                              <!--нас-->
+                          <!--</a>-->
+                      <!--</li>-->
+                      <!--<li class="main-aside__orange__menu&#45;&#45;item">-->
+                          <!--<a href="#portfolio">Портфолио</a>-->
+                      <!--</li>-->
+                      <!--<li class="main-aside__orange__menu&#45;&#45;item">-->
+                          <!--<a href="#skills">-->
+                              <!--Наши-->
+                              <!--навыки-->
+                          <!--</a>-->
+                      <!--</li>-->
+                      <!--<li class="main-aside__orange__menu&#45;&#45;item">-->
+                          <!--<a href="#calc">Стоимость</a>-->
+                      <!--</li>-->
+                  <!--</ul>-->
+                  <!--<div class="hr-line"></div>-->
+                  <!--<ul class="main-aside__orange__social">-->
+                      <!--<li class="main-aside__orange__social&#45;&#45;item">-->
+                          <!--<a href="lnd.html#">-->
+                              <!--<img src="img/general/twitter.png" alt="Tweeter">-->
+                          <!--</a>-->
+                      <!--</li>-->
+                      <!--<li class="main-aside__orange__social&#45;&#45;item">-->
+                          <!--<a href="lnd.html#">-->
+                              <!--<img src="img/general/instagram.png" alt="Instagramm">-->
+                          <!--</a>-->
+                      <!--</li>-->
+                      <!--<li class="main-aside__orange__social&#45;&#45;item">-->
+                          <!--<a href="lnd.html#">-->
+                              <!--<img src="img/general/facebook.png" alt="Facebook">-->
+                          <!--</a>-->
+                      <!--</li>-->
+                  <!--</ul>-->
+              <!--</div>-->
+              <!--<div class="main-aside__blue">-->
+                  <!--<div id="navToggle" class="hamburger hamburger&#45;&#45;slider js-hamburger">-->
+                    <!--<div class="hamburger-box">-->
+                      <!--<div class="hamburger-inner"></div>-->
+                    <!--</div>-->
+                  <!--</div>-->
+                  <!--<ul class="aside-dots">-->
+                      <!--<li class="aside-dots&#45;&#45;item">-->
+                          <!--<a class="active-li why-we-a"-->
+                             <!--href="lnd.html#why-we"></a>-->
+                      <!--</li>-->
+                      <!--<li class="aside-dots&#45;&#45;item">-->
+                          <!--<a class="portfolio-a"-->
+                             <!--href="lnd.html#portfolio"></a>-->
+                      <!--</li>-->
+                      <!--<li class="aside-dots&#45;&#45;item">-->
+                          <!--<a class="skills-a"-->
+                             <!--href="lnd.html#skills"></a>-->
+                      <!--</li>-->
+                      <!--<li class="aside-dots&#45;&#45;item">-->
+                          <!--<a class="calc-a"-->
+                             <!--href="lnd.html#calc"></a>-->
+                      <!--</li>-->
+                  <!--</ul>-->
+              <!--</div>-->
+          <!--</aside>-->
+        </div>
+        
     </main>
 
     <footer class="main-footer">
@@ -1422,8 +1491,8 @@
       $('.main-header__top-banner').owlCarousel({
         loop:true,
         center: true,
-        autoplay:false,
-        autoplayTimeout:4000,
+        autoplay:true,
+        autoplayTimeout:5000,
         responsive:{
           0:{
             items:1
@@ -1473,7 +1542,8 @@
           });
         });
         //------------ menu hamburger -----------
-        $("#navToggle").click(function() {
+        // #navToggle
+        $("#top-menu").click(function() {
           $(this).toggleClass("is-active");
           $(".main-aside__orange").toggleClass("open");
         });
