заменил Наши навыки на услуги и убрал опасити у ли в меню

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </li>
                         <li>
                             <a class="main-header__nav__list--item" href="#skills">
-                                Наши навыки
+                                Услуги
                             </a>
                         </li>
                         <li>
@@ -134,8 +134,7 @@
                             </a>
                         </li>
                         <li class="main-header__nav__list--item mob-phone">
-                            <img class="img-phone" src="img/general/phone-call-white.png" alt="Phone call">
-                            <a class="main-form__left__user-controls__info--phone"  href="tel:+380614567893">+38 061 456 7893
+                            <a class="main-form__left__user-controls__info--phone"  href="tel:+380614567893"><img class="img-phone" src="img/general/phone-call-white.png" alt="Phone call">+38 061 456 7893
                             </a>
                         </li>
                         <li class="main-header__nav__list--item mob-email">
@@ -730,7 +729,7 @@
             </ul>
           </div>
         </section>
-      
+        
         <section class="portfolio" id="portfolio">
             <div class="portfolio-container">
                 <div class="portfolio-container__item first">
@@ -908,7 +907,7 @@
         <section class="skills" id="skills">
             <div class="skills__left">
                 <div class="skills_wrapper">
-                    <div class="skills__left--title">Наши навыки</div>
+                    <div class="skills__left--title">Услуги</div>
                     <div class="skills__left--subtitle">
                         Команда первоклассных профессионалов
                         в каждом направлении
@@ -946,18 +945,18 @@
                 </div>
                 <uL class="skills-right__list">
                     <li class="skills-right__list--item">
-                        Настройку Yandex Direct (поиск и
+                        Настройка Yandex Direct (поиск и
                         РСЯ)
                     </li>
                     <li class="skills-right__list--item">
-                        Настройку Google Adwords (поиск и
+                        Настройка Google Adwords (поиск и
                         КМС)
                     </li>
                     <li class="skills-right__list--item">
-                        Настройку видео-рекламы на
+                        Настройка видео-рекламы на
                         Youtube
                     </li>
-                    <li class="skills-right__list--item">Рекламу в соц.сетях</li>
+                    <li class="skills-right__list--item">Реклама в соц.сетях</li>
                     <li class="skills-right__list--item">
                         Поиск базовых запросов для Вашей
                         ниши
@@ -1553,3 +1552,4 @@
 </body>
 
 </html>
+
