--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- /Yandex.Metrika counter -->
 
     <header class="main-header" id="main-header">
-        <div class="main-header__menu-bg">
+        <div id="ha-header" class="main-header__menu-bg">
             <div class="container">
                 <nav class="main-header__nav">
                     <ul class="main-header__nav__list">
@@ -1486,6 +1486,7 @@
 
     </script>
     <script src="libs/OwlCarousel/owl.carousel.min.js"></script>
+    <script src="libs/HeaderEffects/js/waypoints.min.js"></script>
     <script type="text/javascript">
       $('.main-header__top-banner').owlCarousel({
         loop:true,
@@ -1547,6 +1548,23 @@
           $(".main-aside__orange").toggleClass("open");
         });
     </script>
+    <!--<script type="text/javascript">-->
+			<!--var $head = $( '#ha-header' );-->
+      <!--$( '.ha-waypoint' ).each( function(i) {-->
+        <!--var $el = $( this ),-->
+          <!--animClassDown = $el.data( 'animateDown' ),-->
+          <!--animClassUp = $el.data( 'animateUp' );-->
+
+        <!--$el.waypoint( function( direction ) {-->
+          <!--if( direction === 'down' && animClassDown ) {-->
+            <!--$head.attr('class', 'ha-header ' + animClassDown);-->
+          <!--}-->
+          <!--else if( direction === 'up' && animClassUp ){-->
+            <!--$head.attr('class', 'ha-header ' + animClassUp);-->
+          <!--}-->
+        <!--}, { offset: '100%' } );-->
+      <!--} );-->
+		<!--</script>-->
 
 
 </body>
