правка мобильного меню

--- a/index.html
+++ b/index.html
@@ -1069,8 +1069,7 @@
         <section class="calc" id="calc">
             <div class="container">
                 <div class="calc--title">Калькулятор стоимости сайтов</div>
-                <div class="slider">
-                    <div class="main-slider--item">
+                <div class="slider slick-initialized slick-slider slick-dotted"><div class="slick-list"><div class="slick-track" style="opacity: 1; width: 3000px;"><div class="slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 750px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1;" role="tabpanel" id="slick-slide00"><div><div class="main-slider--item" style="width: 100%; display: inline-block;">
                         <div class="types">
                             <h3>
                                 Нажмите на тип сайта, который Вам подходит, для расчета
@@ -1078,8 +1077,8 @@
                             </h3>
                             <div class="types__item" data-sitetype="vizitka">
                                 <div class="types__item--title">
-                                    Продающий лендинг<br />
-                                    <h3>цена от 39999 руб.</h3>
+                                    Продающий лендинг<br>
+                                    <h3>цена от 56000 руб.</h3>
                                 </div>
                                 <div class="types__item--subtitle">
                                     Идеально подойдет для описания/
@@ -1095,11 +1094,11 @@
                             </div>
                             <div class="types__item" data-sitetype="obout">
                                 <div class="types__item--title">
-                                    Сайт о компании <br />
+                                    Сайт о компании <br>
                                     <h3>цена от 79999 руб.</h3>
                                 </div>
                                 <div class="types__item--subtitle">
-                                    Производство оптовые продажи
+                                    Производство и оптовые продажи
                                 </div>
                                 <ul class="types__item__list">
                                     <li class="types__item__list--item">Завод или фабрика</li>
@@ -1112,7 +1111,7 @@
                             </div>
                             <div class="types__item no-bmargin" data-sitetype="shop">
                                 <div class="types__item--title">
-                                    Интернет магазин <br />
+                                    Интернет магазин <br>
                                     <h3>цена от 119999 руб.</h3>
                                 </div>
                                 <div class="types__item--subtitle">
@@ -1127,7 +1126,7 @@
                             </div>
                             <div class="types__item no-bmargin" data-sitetype="etc">
                                 <div class="types__item--title">
-                                    Эксклюзивный проект <br />
+                                    Эксклюзивный проект <br>
                                     <h3>цена завист от проекта</h3>
                                 </div>
                                 <div class="types__item--subtitle">
@@ -1141,55 +1140,52 @@
                                 </ul>
                             </div>
                         </div>
-                    </div>
-                    <div class="main-slider--item">
+                    </div></div></div><div class="slick-slide" data-slick-index="1" aria-hidden="true" style="width: 750px; position: relative; left: -750px; top: 0px; z-index: 998; opacity: 0;" tabindex="-1" role="tabpanel" id="slick-slide01"><div><div class="main-slider--item" style="width: 100%; display: inline-block;">
                         <div class="calc-form__wrapper">
                             <form class="calc-user-form" id="formcalc2">
                                 <div class="design">
                                     <div class="design--title text line">Дизайн сайта</div>
                                     <p>
-                                        <input type="radio" id="rad1" name="r1" value="simple"
-                                               checked>
+                                        <input type="radio" id="rad1" name="r1" value="simple" checked="" tabindex="-1">
                                         <label for="rad1">Самый простой</label>
                                     </p>
                                     <p>
-                                        <input type="radio" id="rad2" name="r1" value="medium">
+                                        <input type="radio" id="rad2" name="r1" value="medium" tabindex="-1">
                                         <label for="rad2">Среднее (цена/качество)</label>
                                     </p>
                                     <p>
-                                        <input type="radio" id="rad3" name="r1" value="best">
+                                        <input type="radio" id="rad3" name="r1" value="best" tabindex="-1">
                                         <label for="rad3">На дизайне не экономить</label>
                                     </p>
                                 </div>
                                 <div class="right">
                                     <div class="right--title text line">Наполнение сайта</div>
                                     <p>
-                                        <input type="radio" id="radr1" name="r2" checked value="we">
+                                        <input type="radio" id="radr1" name="r2" checked="" value="we" tabindex="-1">
                                         <label for="radr1">
                                             Информацию вносить будете Вы или Ваш
                                             сотрудник
                                         </label>
                                     </p>
                                     <p>
-                                        <input type="radio" id="radr2" name="r2" value="they">
+                                        <input type="radio" id="radr2" name="r2" value="they" tabindex="-1">
                                         <label for="radr2">Информацию вносим мы</label>
                                     </p>
                                 </div>
                                 <div class="moduls">
                                     <div class="moduls--title text line">Дополнительные модули</div>
                                     <p>
-                                        <select name="moduls" multiple="multiple"
-                                                id="ddlAdditionalModules"></select>
+                                        <select name="moduls" multiple="multiple" id="ddlAdditionalModules" tabindex="-1"></select>
                                     </p>
                                 </div>
                                 <div class="need-logo">
                                     <div class="need-logo--title text line">Нужен ли логотип?</div>
                                     <p>
-                                        <input type="radio" id="radl1" name="r3" value="1" checked>
+                                        <input type="radio" id="radl1" name="r3" value="1" checked="" tabindex="-1">
                                         <label for="radl1">Да</label>
                                     </p>
                                     <p>
-                                        <input type="radio" id="radl2" name="r3" value="0">
+                                        <input type="radio" id="radl2" name="r3" value="0" tabindex="-1">
                                         <label for="radl2">Нет</label>
                                     </p>
                                 </div>
@@ -1201,14 +1197,12 @@
                                         задачи, Ваши
                                         цели
                                     </label>
-                                    <textarea id="descr" maxlength="500" title="Error" name="descr"
-                                              required cols="30" rows="10"></textarea>
+                                    <textarea id="descr" maxlength="500" title="Error" name="descr" required="" cols="30" rows="10"></textarea>
                                 </div>
                                 <span style="color:#fe0844;" class="hide" id="errorstep2">Пожалуйста опишите сайт который Вам необходим</span>
                             </form>
                         </div>
-                    </div>
-                    <div class="main-slider--item">
+                    </div></div></div><div class="slick-slide" data-slick-index="2" aria-hidden="true" style="width: 750px; position: relative; left: -1500px; top: 0px; z-index: 998; opacity: 0;" tabindex="-1" role="tabpanel" id="slick-slide02"><div><div class="main-slider--item" style="width: 100%; display: inline-block;">
                         <div class="calc-form__wrapper">
                             <form class="calc-form" id="frmlaststep">
                                 <label class="calc-form--sites text" for="sites">
@@ -1221,58 +1215,47 @@
                                     которой Вы
                                     работаете)
                                 </label>
-                                <textarea id="sites" name="sites" cols="30" rows="10"
-                                          maxlength="500"></textarea>
+                                <textarea id="sites" name="sites" cols="30" rows="10" maxlength="500"></textarea>
                                 <label class="calc-form--sites text" for="ourmessage">
                                     Дополнительные
                                     комментарии
                                     или Ваши
                                     вопросы
                                 </label>
-                                <textarea id="ourmessage" name="ourmessage" cols="30"
-                                          maxlength="500" rows="10"></textarea>
+                                <textarea id="ourmessage" name="ourmessage" cols="30" maxlength="500" rows="10"></textarea>
                                 <div class="shot-info">
                                     <div class="shot-info--title text">
                                         Контакты для получения оценки
                                         стоимости
                                     </div>
                                     <div class="shot-info__inputs">
-                                        <input class="inp-name" type="text" maxlength="100"
-                                               id="calcName" name="name" placeholder="Ваше имя">
-                                        <input class="inp-email" type="email" id="calcEmail"
-                                               maxlength="200" name="email" placeholder="Ваш Email">
+                                        <input class="inp-name" type="text" maxlength="100" id="calcName" name="name" placeholder="Ваше имя" tabindex="-1">
+                                        <input class="inp-email" type="email" id="calcEmail" maxlength="200" name="email" placeholder="Ваш Email" tabindex="-1">
 
                                     </div>
-                                    <span style="color:#fe0844;" class="hide"
-                                          id="errorstep3"></span>
+                                    <span style="color:#fe0844;" class="hide" id="errorstep3"></span>
                                 </div>
-                                <input class="calc-order g-btn" type="button"
-                                       onclick="SendCalc();" name="calc-order" id="calc-order"
-                                       value="Сохранить и отправить">
+                                <input class="calc-order g-btn" type="button" onclick="SendCalc();" name="calc-order" id="calc-order" value="Сохранить и отправить" tabindex="-1">
                                 <b>
                                     Нажимая на "Сохранить и отправить" Вы автоматически соглашетесь
-                                    с <a href="police-ru.html">
+                                    с <a href="police-ru.html" tabindex="-1">
                                         правилами обработки персональных
                                         данных
                                     </a>
                                 </b>
                             </form>
                         </div>
-                    </div>
-                    <div class="main-slider--item">
+                    </div></div></div><div class="slick-slide" data-slick-index="3" aria-hidden="true" style="width: 750px; position: relative; left: -2250px; top: 0px; z-index: 998; opacity: 0;" tabindex="-1" role="tabpanel" id="slick-slide03"><div><div class="main-slider--item" style="width: 100%; display: inline-block;">
                         <div class="calc-thenks-wrapper">
                             Спасибо!<br>Мы скоро с Вами свяжемся
                         </div>
-                    </div>
-                </div>
+                    </div></div></div></div></div><ul class="slick-dots dot-disable" style="display: block;" role="tablist"><li class="slick-active" role="presentation"><img class="step" src="/img/general/1.png" alt="123"><img class="step-active" src="/img/general/1a.png" alt="123"></li><li role="presentation"><img class="step" src="/img/general/2.png" alt="123"><img class="step-active" src="/img/general/2a.png" alt="123"></li><li role="presentation"><img class="step laststep" src="/img/general/3.png" alt="123"><img class="step-active laststep" src="/img/general/3a.png" alt="123"></li><li role="presentation"><img class="step" onlick="return false;" src="/img/general/4.png" alt="123"><img class="step-active " src="/img/general/4a.png" alt="123"></li></ul></div>
                 <div class="slider_arrows" style="display: none;">
-                    <div class="slider__prew-arrow">
-                        <img src="img/general/prew-arrow.jpg"
-                             alt="Prew arrow">
+                    <div class="slider__prew-arrow slick-arrow slick-disabled" aria-disabled="true" style="display: flex;">
+                        <img src="img/general/prew-arrow.jpg" alt="Prew arrow">
                     </div>
-                    <div class="slider__nex-arrow">
-                        <img src="img/general/nex-arrow.jpg"
-                             alt="Next arrow">
+                    <div class="slider__nex-arrow slick-arrow" style="display: flex;" aria-disabled="false">
+                        <img src="img/general/nex-arrow.jpg" alt="Next arrow">
                     </div>
                 </div>
             </div>
