добавил попап с формой, изменил пути на импорт в css, и куча разных правок

--- a/libs/index.html
+++ b/libs/index.html
@@ -940,7 +940,7 @@
         <section class="skills" id="skills">
             <div class="skills__left">
                 <div class="skills_wrapper">
-                    <div class="skills__left--title">Наши навыки</div>
+                    <div class="skills__left--title">Услуги</div>
                     <div class="skills__left--subtitle">
                         Команда первоклассных профессионалов
                         в каждом направлении
